--- a/css/authentication-form.css
+++ b/css/authentication-form.css
@@ -24,9 +24,20 @@ p {
 
 /* 👇👇👇  ADD YOUR FORM STYLES BENEATH  👇👇👇*/
 
+.content {
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  gap: 3rem;
+}
+
 form {
   border: 1px solid #a9a9a9;
   padding: 20px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 2rem;
 }
 
 .subtext {
@@ -37,6 +48,9 @@ form {
 #sign-in,
 #sign-up {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 a {
@@ -45,7 +59,7 @@ a {
 }
 
 label {
-  font-weight: bold;
+  font-weight: normal;
 }
 
 input {
@@ -82,4 +96,50 @@ input[type="submit"]:hover {
 
 .form select {
   height: 30px;
+}
+
+.form-header {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.form-input-control {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.form-group-horizontal-control {
+  width: 100%;
+  display: flex;
+  gap: 2rem;
+}
+
+#state {
+  height: 30px;
+  display: flex;
+  justify-content: flex-start;
+}
+
+#city {
+  height: 30px;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.form-submit-control,
+a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.form-checkbox-control {
+  width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  gap: 1rem;
 }
